compiler/weave_syntax/tests/data/syntax/statements/err0001.error
error: Unexpected tokens
        --> <source>:1:1
         |
       1 | public if let x(y) = 42 {
         | ^^^^^^^^^^^^^^^^^^^^^^^^^
       2 |     vo.v += 42;
         | ^^^^^^^^^^^^^^^
       3 | }
         | ^
       4 | if x(y) = 42 {
         | ^^^^^^^^^^^^^^
       5 |   vo.v += 213;
         | ^^^^^^^^^^^^^^
       6 | }
         | ^
