compiler/weave_syntax/tests/data/syntax/statements/err0001.source
public if let x(y) = 42 {
    vo.v += 42;
}
if x(y) = 42 {
  vo.v += 213;
}
